2007-10-12  Eric Hodel  <drbrain@segment7.net>

	* setup.rb: Remove source caches on install.
	* doc/release_notes/rel_0_9_5.rdoc: Draft added.
	* lib/rubygems/rubygems_version.rb: 0.9.4.5 beta.

2007-10-10  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Fix small bug found by Alan C.
	Francis.

2007-10-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Use install_dir so custom gem
	repos can be used.
	* lib/rubygems/specification.rb: Always set required attributes, even
	if they match the default.

2007-10-08  Ryan Davis  <ryan@wrath.local>

	* lib/rubygems.rb: Fixed require order so custom_require is
	last. Added HACK tag to remind Jim to release rake.
	* test/test_gem_source_index.rb: Fixed latest_specs' tests so
	failures were much more readable.
	* lib/rubygems/source_index.rb: Fixed latest_specs to deal with
	platforms appropriately. Returns array again.

2007-10-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb: Boost bulk_threshold to 1000, Marshal
	format is smaller than yaml format quick index.
	* lib/rubygems/installer.rb: Make #shebang correctly rewrite env
	shebangs.
	* lib/rubygems/specification.rb: Mark Time.today for removal, too much
	depends upon it now.

2007-10-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Sped up ::_load.
	* lib/rubygems/source_index.rb: Sped up #search.
	* lib/rubygems/version.rb: Replace #to_ints with #ints, and cache
	result.
	* lib/rubygems/source_info_cache.rb: Only flush cache when it changes.

2007-10-05  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/user_interaction.rb: Allow customization of completion
	message for progress reporters.
	* lib/rubygems/command.rb: Add --quiet option.
	* lib/rubygems/commands/generate_index_command.rb: Add description.

2007-10-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb: Also check and uninstall old platform